# tetris

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/tetris/: board.cpp  board.hpp  colors.hpp  tetris.cpp  tetris.h  tetris.hpp
tests/: CMakeLists.txt  test_basic.cpp
